Add content to DomDistiller.html to trigger actual content extraction, which expects at least some long-enough text content during extraction.
Also update .gitignore to ignore .swp files.

BUG=
R=cjhopman@chromium.org

Review URL: https://codereview.chromium.org/194573002

--- a/war/DomDistiller.html
+++ b/war/DomDistiller.html
@@ -11,5 +11,13 @@
     <script type="text/javascript" language="javascript" src="domdistiller/domdistiller.nocache.js"></script>
   </head>
   <body>
+  <p>
+    This is just a block of arbitary text to provide content for proper extraction.
+    To test extraction of specific HTML content, copy the interesting segment and paste it between the body HTML tags here.
+    Then build with "ant devmode", click "Launch Default Browser", and watch the results in the new tab opened in the browser. 
+  </p>
+  <p>
+    <a href="http://abc.com">This is just an arbitary link to test that it's ignored by content extraction.</a>
+  </p>
   </body>
 </html>
