implement debugging mechanism for processing of next/prev page links
1) PagingLinksFinder uses a Map<Element, String> to log debug messages for each
   processed link.  a DEBUG boolean controls when logging is enabled.

2) in findPagingLink(), whenever a link wants to record an interesting code
   point, call appendDbgStrForLink() to update its debug string in the map.
   after each link is processed, its entry in the map contains a concatenated
   string of such messages, delimited by ';'.

3) after all links are processed, call logDbgInfoToConsole() to log the
   following to console:
   - number of links processed
   - the next or prev link found
   - for each link: href, text, debug string in map

4) logging for "ant test.dev" is in test output file. and in chrome logfile for
   chrome browser.
   i'll describe one more easy change to the chrome code for easier debugging
   when i pull in this change into chrome.

BUG=
R=cjhopman@chromium.org

Review URL: https://codereview.chromium.org/213953002

--- a/war/DomDistiller.html
+++ b/war/DomDistiller.html
@@ -15,6 +15,8 @@
     This is just a block of arbitary text to provide content for proper extraction.
     To test extraction of specific HTML content, copy the interesting segment and paste it between the body HTML tags here.
     Then build with "ant devmode", click "Launch Default Browser", and watch the results in the new tab opened in the browser. 
+    <a href="http://abc.com">This is just an arbitary link to test that it shows up in extracted content.</a>
+  </p>
   </p>
   <p>
     <a href="http://abc.com">This is just an arbitary link to test that it's ignored by content extraction.</a>
